tree-sitter-pivot/corpus/functions.txt
===
main-default-inf
===

func main() {
	return inf;
}

---
(source_file
    (function_definition
        (identifier)
        (parameter_list)
        (block
        (return_statement (rune_literal)))))


===
main-add
===

func add() {
    return 1;
}

func main() {
    return inf;
}

---
(source_file
    (function_definition
        (identifier)
        (parameter_list)
        (block
        (return_statement (integer_literal))))
    (function_definition
        (identifier)
        (parameter_list)
        (block
        (return_statement (rune_literal)))))


===
function-one-arg
===

func add(x) {
    return x;
}


---
    (source_file
        (function_definition
            (identifier)
            (parameter_list
                (identifier))
            (block
                (return_statement (identifier)))))

===
function-multiple-args
===

func add(x,y) {
    return x;
}


---
    (source_file
        (function_definition
            (identifier)
            (parameter_list
                (identifier)
                (identifier))
            (block
                (return_statement (identifier)))))
