tree-sitter-pivot/corpus/returns.txt
==================
return-number
==================

func x() {
  return 1;
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (block
      (return_statement (number)))))


==================
return-str
==================

func x() {
  return 'pivot hello world';
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (block
      (return_statement (string_literal)))))



==================
return-bool
==================

func x() {
  return True;
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (block
      (return_statement (boolean_literal)))))
