tree-sitter-pivot/corpus/variable.txt
===
init-default
===

func main() {
    init x = 0;
    return inf;
}

---
(source_file
    (function_definition
        (identifier)
        (parameter_list)
        (block
            (init_statment
                (identifier)
                (assignment)
                (integer_literal))
            (return_statement
                (rune_literal)))))



===
const-default
===

func main() {
    const y = 'hello world';
    return inf;
}

---
(source_file
    (function_definition
        (identifier)
        (parameter_list)
        (block
            (const_statment
                (identifier)
                (assignment)
                (string_literal))
            (return_statement
                (rune_literal)))))


===
assignment
===

func main() {
    init x = 10;
    const y = x;
    return inf;
}

---
(source_file
    (function_definition
        (identifier)
        (parameter_list)
        (block
            (init_statment
                (identifier)
                (assignment)
                (integer_literal))
            (const_statment
                (identifier)
                (assignment)
                (identifier))
            (return_statement
                (rune_literal)))))